knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/Facility_Profile__c.object-meta.xml
<CustomObject>
    <description>Facility Profile and Onbase demographics for each Customer Hospital</description>
    <label>Facility Profile</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>FP Demographics Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>