knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Acceptable_EPF_documentation_type__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_EPF_documentation_type__c</fullName>
    <label>Acceptable EPF documentation type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text file - Delimited</fullName>
            </value>
            <value>
                <fullName>Text file - Fixed Width</fullName>
            </value>
            <value>
                <fullName>HL7 - 2.x</fullName>
            </value>
            <value>
                <fullName>HL7 - 3.x</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Web Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>