knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Addendum_In_The_Feed__c.field-meta.xml
<CustomField>
    <fullName>Addendum_In_The_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addendum In The Feed</label>
    <type>Checkbox</type>
</CustomField>