knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Admits_In_Feed__c.field-meta.xml
<CustomField>
    <fullName>Admits_In_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admits In Feed:</label>
    <type>Checkbox</type>
</CustomField>