knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Contact__c.field-meta.xml
<CustomField>
    <fullName>ADT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADT Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facility Profiles (ADT_Contact)</relationshipLabel>
    <relationshipName>R00N40000001iQtsEAE</relationshipName>
    <type>Lookup</type>
</CustomField>