knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Feed_Expiration__c.field-meta.xml
<CustomField>
    <fullName>ADT_Feed_Expiration__c</fullName>
    <formula>ADT_TERM_DATE__c +  VALUE(TEXT(Post_DOS_Days__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADT Feed Expiration</label>
    <type>Date</type>
</CustomField>