knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Feeds_Active__c.field-meta.xml
<CustomField>
    <fullName>ADT_Feeds_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADT Feeds Active</label>
    <type>Checkbox</type>
</CustomField>