knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Live__c.field-meta.xml
<CustomField>
    <fullName>ADT_Live__c</fullName>
    <formula>IF(ISNULL(ADT_START_DATE__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADT Live</label>
    <type>Text</type>
</CustomField>