knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Management__c.field-meta.xml
<CustomField>
    <fullName>ADT_Management__c</fullName>
    <label>ADT Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>Shasta Networks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>