knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Management_Account__c.field-meta.xml
<CustomField>
    <fullName>ADT_Management_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to denote which facility manages the ADT field. The trigger using this field is ADT_Notification</description>
    <inlineHelpText>This field is used to denote which facility (Hospital System) manages the ADT field.</inlineHelpText>
    <label>ADT Management Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Profiles (ADT Management Account)</relationshipLabel>
    <relationshipName>ADT_Facility_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>