knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>ADT_START_DATE__c</fullName>
    <label>ADT Start Date</label>
    <type>Date</type>
</CustomField>