knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/ADT_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>ADT_Transition_Date__c</fullName>
    <label>ADT Transition Date</label>
    <type>Date</type>
</CustomField>