knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Automated_Log__c.field-meta.xml
<CustomField>
    <fullName>Automated_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Log</label>
    <type>Checkbox</type>
</CustomField>