knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Automated_Log_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Automated_Log_End_Date__c</fullName>
    <label>Automated Log End Date</label>
    <type>Date</type>
</CustomField>