knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Back_up_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Back_up_Procedure__c</fullName>
    <label>Back-up Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>AthenaHealth</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>CPSI</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
            </value>
            <value>
                <fullName>EPowerDoc</fullName>
            </value>
            <value>
                <fullName>Gehrimed</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>Medhost</fullName>
            </value>
            <value>
                <fullName>Meditech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paragon</fullName>
            </value>
            <value>
                <fullName>PICIS</fullName>
            </value>
            <value>
                <fullName>T-System EV</fullName>
            </value>
            <value>
                <fullName>Hybrid (EMR/Paper)</fullName>
            </value>
            <value>
                <fullName>Paper SCP Templates</fullName>
            </value>
            <value>
                <fullName>Paper Other</fullName>
            </value>
            <value>
                <fullName>Paper T-System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>