knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Billable_Volume__c.field-meta.xml
<CustomField>
    <fullName>Billable_Volume__c</fullName>
    <label>Billable Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>