knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Billing_Company__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company__c</fullName>
    <formula>CASE( Facility_Name__r.Billing_Company__c , &quot;EMBCC&quot;, &quot;EMBCC&quot;, &quot;EPBS&quot;, &quot;EPBS&quot;, &quot;LOYA&quot;, &quot;LOYA&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Company</label>
    <type>Text</type>
</CustomField>