knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/CAC__c.field-meta.xml
<CustomField>
    <fullName>CAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAC</label>
    <type>Checkbox</type>
</CustomField>