knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/CAC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CAC_End_Date__c</fullName>
    <label>CAC End Date</label>
    <type>Date</type>
</CustomField>