knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/CAC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CAC_Start_Date__c</fullName>
    <label>CAC Start Date</label>
    <type>Date</type>
</CustomField>