knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/CDFGoLiveProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>CDFGoLiveProcessStatus__c</fullName>
    <label>CDF Go Live Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Post Go Live Monitoring</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>Feed Terminated</fullName>
            </value>
            <value>
                <fullName>Above the Line</fullName>
                <isActive>false</isActive>
                <label>Above the Line</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>