knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Chart_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Chart_Acquisition__c</fullName>
    <label>Chart Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Centralized fed ex</fullName>
            </value>
            <value>
                <fullName>Centralized in house EDRC</fullName>
            </value>
            <value>
                <fullName>Clinical Data Feed</fullName>
            </value>
            <value>
                <fullName>Custom Chart Image</fullName>
            </value>
            <value>
                <fullName>Custom Electronic Medical Record</fullName>
            </value>
            <value>
                <fullName>Decentralized KCNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>