knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Clinical_Data_Feed_First_DOS__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Data_Feed_First_DOS__c</fullName>
    <label>Clinical Data Feed First DOS</label>
    <type>Date</type>
</CustomField>