knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Clinical_Data_Feed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Data_Feed_Start_Date__c</fullName>
    <label>Clinical Data Feed Start Date</label>
    <type>Date</type>
</CustomField>