knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Cosign_Rule_Applies__c.field-meta.xml
<CustomField>
    <fullName>Cosign_Rule_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cosign Rule Applies</label>
    <type>Checkbox</type>
</CustomField>