knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Data_elements_required__c.field-meta.xml
<CustomField>
    <fullName>Data_elements_required__c</fullName>
    <label>Data elements required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>MRN</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>DOB</fullName>
            </value>
            <value>
                <fullName>Patient Name</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>