knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Data_Omitted_In_Feed__c.field-meta.xml
<CustomField>
    <fullName>Data_Omitted_In_Feed__c</fullName>
    <label>Data Omitted In Feed</label>
    <type>TextArea</type>
</CustomField>