knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Date_implemented_current_docTB__c.field-meta.xml
<CustomField>
    <fullName>Date_implemented_current_docTB__c</fullName>
    <label>Date implemented current documentation</label>
    <type>Date</type>
</CustomField>