knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Date_Implemented_Scribe_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Implemented_Scribe_Program__c</fullName>
    <label>Date Implemented Scribe Program</label>
    <type>Date</type>
</CustomField>