knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Designated_Scribe_Contact__c.field-meta.xml
<CustomField>
    <fullName>Designated_Scribe_Contact__c</fullName>
    <label>Designated Scribe Contact</label>
    <type>Email</type>
</CustomField>