knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Dictation_Software__c.field-meta.xml
<CustomField>
    <fullName>Dictation_Software__c</fullName>
    <label>Dictation Software</label>
    <type>TextArea</type>
</CustomField>