knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/DOS_Charts_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>DOS_Charts_Processed_By__c</fullName>
    <label>DOS Charts Processed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Stateside</fullName>
            </value>
            <value>
                <fullName>CDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>