knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EDRC_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Additional_Comments__c</fullName>
    <label>EDRC Additional Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>