knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EDRC_Email__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Email__c</fullName>
    <label>EDRC Email</label>
    <type>Email</type>
</CustomField>