knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EDRC_Manager__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Manager__c</fullName>
    <label>EDRC Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>