knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EDRC_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Phone_2__c</fullName>
    <label>EDRC Phone 2</label>
    <type>Phone</type>
</CustomField>