knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EDRC_Schedule_Days__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Schedule_Days__c</fullName>
    <label>EDRC Schedule Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sun - Sat</fullName>
            </value>
            <value>
                <fullName>Mon - Fri</fullName>
                <default>true</default>
                <label>Mon - Fri</label>
            </value>
            <value>
                <fullName>Mon - Sat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>