knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EDRC_Schedule_End__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Schedule_End__c</fullName>
    <label>EDRC Schedule End</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10pm</fullName>
            </value>
            <value>
                <fullName>9pm</fullName>
            </value>
            <value>
                <fullName>8pm</fullName>
            </value>
            <value>
                <fullName>7pm</fullName>
            </value>
            <value>
                <fullName>6pm</fullName>
            </value>
            <value>
                <fullName>5pm</fullName>
                <default>true</default>
                <label>5pm</label>
            </value>
            <value>
                <fullName>4pm</fullName>
            </value>
            <value>
                <fullName>3pm</fullName>
            </value>
            <value>
                <fullName>2pm</fullName>
            </value>
            <value>
                <fullName>1pm</fullName>
            </value>
            <value>
                <fullName>12pm</fullName>
            </value>
            <value>
                <fullName>1am</fullName>
            </value>
            <value>
                <fullName>2am</fullName>
            </value>
            <value>
                <fullName>3am</fullName>
            </value>
            <value>
                <fullName>4am</fullName>
            </value>
            <value>
                <fullName>5am</fullName>
            </value>
            <value>
                <fullName>6am</fullName>
            </value>
            <value>
                <fullName>7am</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>