knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EKG_Accessible_to_HiOps__c.field-meta.xml
<CustomField>
    <fullName>EKG_Accessible_to_HiOps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EKG Accessible to HiOps</label>
    <type>Checkbox</type>
</CustomField>