knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Electronic_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Tracking</label>
    <type>Checkbox</type>
</CustomField>