knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EMR_Name__c.field-meta.xml
<CustomField>
    <fullName>EMR_Name__c</fullName>
    <label>EMR Name</label>
    <type>TextArea</type>
</CustomField>