knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EMRConversionDate__c.field-meta.xml
<CustomField>
    <fullName>EMRConversionDate__c</fullName>
    <label>EMR Conversion Date</label>
    <type>Date</type>
</CustomField>