knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Addendums_Accepted__c.field-meta.xml
<CustomField>
    <fullName>EPF_Addendums_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MySCP Complete Addendums Accepted</label>
    <type>Checkbox</type>
</CustomField>