knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Connectivity_options__c.field-meta.xml
<CustomField>
    <fullName>EPF_Connectivity_options__c</fullName>
    <label>EPF Connectivity options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFTP (TLS/SSL)</fullName>
            </value>
            <value>
                <fullName>FTPS (SSH)</fullName>
            </value>
            <value>
                <fullName>Direct Connect (Socket)</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>