knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Contact__c.field-meta.xml
<CustomField>
    <fullName>EPF_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPF Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Facility Profiles (EPF Contact)</relationshipLabel>
    <relationshipName>Facility_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>