knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>EPF_Email_Body__c</fullName>
    <label>EPF Email Body</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>