knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Email_Delivery__c.field-meta.xml
<CustomField>
    <fullName>EPF_Email_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>My Complete Email Delivery</label>
    <type>Checkbox</type>
</CustomField>