knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>EPF_Email_Recipient__c</fullName>
    <label>EPF Email Recipient</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>