knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/EPF_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>EPF_Email_Subject__c</fullName>
    <label>EPF Email Subject</label>
    <type>TextArea</type>
</CustomField>