knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Facility_CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_CEO_Name__c</fullName>
    <label>Facility_CEO_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>