knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N40000001iS8FEAU</relationshipName>
    <type>Lookup</type>
</CustomField>