knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Facility_not_responsive_declined__c.field-meta.xml
<CustomField>
    <fullName>Facility_not_responsive_declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dr Martinez and the Exec Ops Door to Provider Team asks that I work with IT to have some data collection elements added into Salesforce.</description>
    <label>Facility not responsive/declined</label>
    <type>Checkbox</type>
</CustomField>