knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Facility_Request_Program_Solution__c.field-meta.xml
<CustomField>
    <fullName>Facility_Request_Program_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Five Minute Wait Loss Campaign</description>
    <label>Facility Request Program/Solution</label>
    <type>Checkbox</type>
</CustomField>