knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Facility_Targeted_by_Region__c.field-meta.xml
<CustomField>
    <fullName>Facility_Targeted_by_Region__c</fullName>
    <label>Facility Targeted by Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>SC I</fullName>
            </value>
            <value>
                <fullName>SC II</fullName>
            </value>
            <value>
                <fullName>SC III</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SE II</fullName>
            </value>
            <value>
                <fullName>SW I</fullName>
            </value>
            <value>
                <fullName>SW II</fullName>
            </value>
            <value>
                <fullName>SW III</fullName>
            </value>
            <value>
                <fullName>SW IV</fullName>
            </value>
            <value>
                <fullName>All Facilities</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>