knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Facility_Translate_Code__c.field-meta.xml
<CustomField>
    <fullName>Facility_Translate_Code__c</fullName>
    <label>Facility Translate Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>