knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Fax_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Fax_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Delivery</label>
    <type>Checkbox</type>
</CustomField>