knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Feed_Lag_Time__c.field-meta.xml
<CustomField>
    <fullName>Feed_Lag_Time__c</fullName>
    <label>Feed Lag Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>