knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Facility_Profile__c/fields/Frequency_of_delivery_of_EPF_addendums__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_delivery_of_EPF_addendums__c</fullName>
    <label>Frequency of delivery of EPF addendums</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Real time</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>